# qubit-calibration

./: .gitignore  README.md  pytest.ini  requirements.txt  run_step1.py  run_step2.py  run_step3.py  run_step4.py  run_step5.py
cpp/: CMakeLists.txt
cpp/include/: bloch_solver.h
cpp/src/: bindings.cpp  bloch_solver.cpp  test_bloch_main.cpp
python/rabi/: __init__.py  bayesian.py  fitting.py  qiskit_backend.py  ramsey.py  simulator.py  t1t2_noise.py  visualization.py
python/tests/: conftest.py  test_bayesian.py  test_qiskit_backend.py  test_rabi.py  test_ramsey.py  test_t1t2.py
